# ikc-log-center

./: .gitignore  README.md  pyproject.toml  show_log_center.sh  start_log_center.sh  stop_log_center.sh
config/: pypi.env.example
docs/: design.md
scripts/: publish-pypi.sh
src/log_center_sdk/: __init__.py  celery_hooks.py  core.py  handlers.py  instrumentation.py
src/log_center_sdk/integrations/: __init__.py  fastapi.py  flask.py
src/log_center_server/: __init__.py  __main__.py  app.py  auth.py  celery_task.py  grpc_server.py  mcp_server.py  query.py  storage.py  ui.py
tests/: conftest.py  test_celery_hooks.py  test_core.py  test_handlers.py  test_instrumentation.py
tests/test_server/: conftest.py  test_app.py  test_query.py  test_storage.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/api/: index.ts
web/src/components/: Layout.tsx  LogDetail.tsx  LogTable.tsx  SearchForm.tsx  TraceChain.tsx
web/src/pages/: DashboardPage.tsx  HelpPage.tsx  SearchPage.tsx  TokensPage.tsx  TopologyPage.tsx
web/src/types/: index.ts
