[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ikc-log-center"
version = "0.3.0"
description = "Lightweight SDK + Server for log_center — decorator-based instrumentation with HTTP/gRPC/Celery delivery, multi-backend storage, and search UI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "IKC Team" }]
keywords = ["logging", "instrumentation", "telemetry", "log-center", "tracing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
# SDK extras
grpc = ["grpcio>=1.50"]
celery = ["celery>=5.0"]
fastapi = ["fastapi>=0.100", "starlette"]
flask = ["flask>=2.0"]
# Server extras
server = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "sqlalchemy>=2.0",
]
ui = []  # UI is now Vite+React (see web/ directory), no Python deps needed
mcp = ["mcp>=1.28"]
mysql = ["mysql-connector-python>=8.0"]
pg = ["psycopg[binary]>=3.0"]
all = [
    "grpcio>=1.50",
    "celery>=5.0",
    "fastapi>=0.100",
    "starlette",
    "flask>=2.0",
    "uvicorn[standard]>=0.20",
    "sqlalchemy>=2.0",
    "mysql-connector-python>=8.0",
    "psycopg[binary]>=3.0",
    "mcp>=1.28",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "ruff>=0.1",
]

[project.scripts]
log-center-server = "log_center_server.__main__:main"
log-center-mcp = "log_center_server.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/log_center_sdk", "src/log_center_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "BLE", "W"]
